Fix shipping on iPhone

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1448,6 +1448,8 @@ html.dark {
 }
 
 .header {
+  position: relative;
+  z-index: 2;
   background: var(--header-bg-color);
 }
 @media (max-width: 991.98px) {
@@ -2759,14 +2761,14 @@ html.dark {
   font-size: 1.8rem;
   font-weight: 600;
   text-align: center;
-  padding: 14px;
+  padding: 20px;
 }
 .form__close-dialog {
   font-size: 3rem;
   position: absolute;
   top: 0;
   right: 0;
-  padding: 2px 18px;
+  padding: 12px 18px;
   opacity: 0.8;
 }
 .form__search {
@@ -2788,14 +2790,17 @@ html.dark {
 }
 @media (max-width: 991.98px) {
   .form__search {
-    height: 42px;
+    height: 48px;
+  }
+  .form__search-icon {
+    width: 20px;
   }
 }
 @media (max-width: 575.98px) {
   .form__search {
     padding: 0 14px;
     border: 1px solid #d2d1d6;
-    margin: 10px 20px 0;
+    margin: 10px 30px 0;
     border-radius: 10px;
   }
 }
@@ -2804,6 +2809,11 @@ html.dark {
   margin-top: 10px;
   overflow-y: auto;
   overscroll-behavior: contain;
+}
+@supports (-webkit-touch-callout: none) {
+  .form__options-list {
+    padding: 300px;
+  }
 }
 .form__option {
   padding: 8px 20px;
@@ -2819,7 +2829,8 @@ html.dark {
 }
 @media (max-width: 991.98px) {
   .form__option {
-    padding: 14px 20px;
+    padding: 18px 30px;
+    font-size: 1.6rem;
   }
 }
 .form__error {
@@ -2999,7 +3010,7 @@ html.dark {
   flex: 1;
   height: 100%;
   padding-left: 15px;
-  font-size: 1.4rem;
+  font-size: 1.6rem;
   font-weight: 500;
   line-height: 142.857%;
 }
